--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
       <footer class="site-footer">
 
-        <span class="site-footer-credits">Copyright © 2015 <a href="https://webmining.spd.louisville.edu">The Knowledge Discovery and Web Mining Lab</a></span>
+        <span class="site-footer-credits">Copyright © 2015 <a href="http://webmining.spd.louisville.edu/">The Knowledge Discovery and Web Mining Lab</a></span>
       </footer>
 
     </section>
